--- a/AvaloniaBankAppEF/AvaloniaBankAppEF.csproj
+++ b/AvaloniaBankAppEF/AvaloniaBankAppEF.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <AvaloniaResource Remove="Assets\Styles\BtnStyles.axaml" />
     <AvaloniaResource Remove="Assets\Styles\ColorsDictionary.axaml" />
+    <AvaloniaResource Remove="Assets\Styles\DGStyles.axaml" />
     <AvaloniaResource Remove="Assets\Styles\TextStyles.axaml" />
   </ItemGroup>
 
@@ -25,6 +26,12 @@
 
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="$(AvaloniaVersion)" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <AvaloniaXaml Update="Assets\Styles\DGStyles.axaml">
+      <SubType>Designer</SubType>
+    </AvaloniaXaml>
   </ItemGroup>
 
   <ItemGroup>
