--- a/AvaloniaBankAppEF.Desktop/AvaloniaBankAppEF.Desktop.csproj
+++ b/AvaloniaBankAppEF.Desktop/AvaloniaBankAppEF.Desktop.csproj
@@ -11,6 +11,8 @@
 
   <ItemGroup>
     <PackageReference Include="Avalonia.Desktop" Version="$(AvaloniaVersion)" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+    <PackageReference Include="Splat.Microsoft.Extensions.DependencyInjection" Version="14.8.12" />
   </ItemGroup>
 
   <ItemGroup>
