--- a/AvaloniaBankAppEF.Desktop/AvaloniaBankAppEF.Desktop.csproj
+++ b/AvaloniaBankAppEF.Desktop/AvaloniaBankAppEF.Desktop.csproj
@@ -29,7 +29,7 @@
 
   <ItemGroup>
     <None Update="Bank.db">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 </Project>
