--- a/AvaloniaBankAppEF.Desktop/AvaloniaBankAppEF.Desktop.csproj
+++ b/AvaloniaBankAppEF.Desktop/AvaloniaBankAppEF.Desktop.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Avalonia.Desktop" Version="11.0.7" />
+    <PackageReference Include="MessageBox.Avalonia" Version="3.1.5.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.15">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
